<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Book_Trip_Flight</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_search">Search</string>
    <string name="from">From</string>
    <string name="to">TO</string>
    <string name="depart">Depart</string>
    <string name="return1">Return</string>
    <string name="direct">DirectFligtOnly</string>
    <string name="search">Search</string>
    <string name="title_activity_feed_back">FeedBack</string>
    <string name="feedback">FeedBack</string>
    <string name="send">Send</string>
    <string name="write">Write FeedBack Please</string>
    <string name="title_activity_book_atrip">BookAtrip</string>
    <string name="outbound">Outbound 0 Result</string>
    <string name="TRAVELLER">For all Travellers</string>
    <string name="sorry">Sorry , no Flights Avaliable</string>
    <string name="pay">Pay</string>
    
    <string name="try1">TRY A NEW SEARCH......</string>
    
    <string name="book">Book</string>
    
    <string name="try2">TRY to Search</string>
    
    <string name="Call">Call Admin</string>

</resources>
