<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    android:background="#E0FFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BookAtrip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:weightSum="2" >

        <TextView
            android:id="@+id/bookFromTXTvIEW"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
             android:textColor="#0066FF"
             android:gravity="center"
            android:layout_weight="1"
             android:textSize="20sp"
            android:text="@string/from" />

        <TextView
            android:id="@+id/bookToTXTvIEW"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
                         android:gravity="center"
            android:textSize="20sp"
            android:background="#ADD8E6"
            android:text="@string/to"
            android:textColor="#F5FFFA" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/book_outbound_TXTVIEW"
           android:layout_width="wrap_content"
                        android:gravity="center"
           android:textStyle="bold"
        android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outbound" />

        <TextView
            android:id="@+id/book_forallTraveeler_TXTvIEW"
           android:layout_width="wrap_content"
                        android:gravity="center"
           android:textStyle="bold"
        android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TRAVELLER" />

    </LinearLayout>

    <ImageView
        android:id="@+id/tripBook"
                android:layout_weight="2"
                     android:gravity="center"
        android:src="@drawable/s"
      android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/sorry_TextView"
        android:layout_width="wrap_content"
                     android:gravity="center"
        
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:hint="@string/sorry" />

    <TextView
        android:id="@+id/book_TRY_TXTvIEW"
        android:layout_width="wrap_content"
                     android:gravity="center"
        
         android:textColor="#0066FF"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/try1" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:text="@string/try2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1_Book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:text="@string/pay"
        android:textSize="25sp"
        android:textStyle="bold" />
    
</LinearLayout>
