<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F8FF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FeedBack" >

    <TextView
        android:id="@+id/sorry_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/feedback"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/feedBackTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/write"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/TxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sorry_TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="Your Name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/AdressTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TxtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="Adress"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/sendFeedBackButtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/feedBackTXT"
        android:layout_below="@+id/feedBackTXT"
        android:layout_marginTop="46dp"
        android:background="@drawable/btn_bg"
        android:text="@string/send" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sendFeedBackButtn"
        android:layout_alignBottom="@+id/sendFeedBackButtn"
        android:layout_alignRight="@+id/feedBackTXT"
        android:background="@drawable/btn_bg"
        android:text="@string/Call" />

</RelativeLayout>
