<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0E0E6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Search" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="14"
        android:background="#E0FFFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sorry_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#0066FF"
                android:gravity="center"
                android:text="@string/from" />

            <TextView
                android:id="@+id/book_TRY_TXTvIEW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#0066FF"
                android:gravity="center"
                android:text="@string/to" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:weightSum="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@+id/fromTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                   android:gravity="center"
                   android:hint="- - -"
                    android:textStyle="bold"
                >

                <requestFocus />
            </AutoCompleteTextView>

            <AutoCompleteTextView
                android:id="@+id/toTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                   android:gravity="center"
                   android:textStyle="bold"
               android:layout_weight="1"
              android:hint="- - -" />

        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            android:id="@+id/tableRow3"
             android:weightSum="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/depart"
                android:textColor="#0066FF" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/return1"
                android:textColor="#0066FF" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
             android:weightSum="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/feedBackTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                 android:gravity="center"
                 android:layout_weight="1"
                android:inputType="date" />

            <EditText
                android:id="@+id/AdressTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                 android:gravity="center"
                 android:layout_weight="1"
                android:inputType="date" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
              android:weightSum="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/travellers"
                   android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/class1"
                   android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
               android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/deriect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#0066FF"
                android:text="@string/direct" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
               android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/btn_bg"
                android:text="@string/search" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
